data summary and page layout changes

--- a/views/attendanceDTR.ejs
+++ b/views/attendanceDTR.ejs
@@ -5,17 +5,16 @@
     <%-include('partials/Aside')%> 
 <div class="d-flex flex-column flex-fill" style="border-left: 1px solid #dddddd; padding: 1.5em 2em 1.5em 2em; gap:1.5em; overflow: auto;">
 
-    <%-include('partials/navBar.ejs', {data:{
-        attendance: {
-            parentUrl:'/admin/attendance',
-            url: '/admin/attendance/all',
-            name: 'Attendance'
-        },
-        attendancePeriod:{
-            url: '/admin/attendance/history/print/per-employee',
-            name: 'Attendance Periods'
-            },
-        },
+      <%-include('partials/navBar.ejs', {data:{
+          attendance: {
+              url: '/admin/attendance/all',
+              name: 'Attendance'
+          },
+          attendancePeriod:{
+              url: '/admin/attendance/history/print',
+              name: 'Attendance Periods'
+          },
+      },
     })%>
 
     <div class="d-flex gap-4 "> 
@@ -77,42 +76,67 @@
             <div class="input-group">
                 <div class="input-group-prepend">
                   <div class="input-group-text  rounded-1 d-flex gap-2">
-                  <input type="radio" name="datefil" value="alltime" aria-label="Radio button for following text input" checked> All time
+                  <input type="radio" name="datefil" value="alltime" aria-label="Radio button for following text input" checked> <label>label</label>
                   <input type="radio" name="datefil" value="today" aria-label="Radio button for following text input"> Today
-                  <input type="radio" name="datefil" value="15d"aria-label="Radio button for following text input"> 15D
-                  <input type="radio" name="datefil" value="30d"aria-label="Radio button for following text input"> 30D
+                  <input type="radio" name="datefil" value="15d"data-odaria-label="Radio button for following text input"> 15D
+                  <input type="radio" name="datefil" value="30d"data-odaria-label="Radio button for following text input"> 30D
                   </div>
                 </div>
               </div>
-            <input type="date" name="from" id="from" value="<%=query.from%>" class="rounded-1">
-            <input type="date" name="to" id="to" value="<%=query.to%>" class="rounded-1">
+            <input type="date" name="from" value="<%=query.from%>" id="from" class="rounded-1">
+            <input type="date" name="to" value="<%=query.to%>" id="to" class="rounded-1"    >
+            <a id='btnCreate_AttendanceHistory' class="btn btn-primary" href="#" ==> Create DTR </a>
+            <script>
+              const createPayroll = document.querySelector('#btnCreate_AttendanceHistory');
+
+              const gFrom = document.querySelector('input[type="date"]#from');
+              const gTo = document.querySelector('input[type="date"]#to');
+              //get all the values
+              
+              
+              createPayroll.addEventListener('click', async (e) => {
+                e.preventDefault();
+                const values = {
+                  from: gFrom.value,
+                  to: gTo.value,
+                }
+                const data = await fetch('/admin/api/attendance/history', {
+                  method: 'POST',
+                  headers: {
+                    'Content-Type': 'application/json'
+                  },
+                  body: JSON.stringify(values)
+                })
+
+                const result = await data.json()
+                console.log(result)
+              });
+            </script>
             
-            <button type="submit" class="btn btn-primary">Submit</button>
         </form>
     </div>
-    <%-include('partials/navBar.ejs', {data:{
+      <%-include('partials/navBar.ejs', {data:{
         dailyTimeRecord: {
-            url: '/admin/attendance/history/all',
-            name: 'Daily Time Records'
+          url: '/admin/attendance/history/all',
+          name: 'Daily Time Records'
         },
         printDTR:{
           url: '/admin/attendance/history/print',
           name: 'Print DTR'
         },
-        attendancePeriod:{
-            url: '/admin/attendance/history/print/per-employee',
-            name: 'Print DTR Per Employee'
-            },
+        printDTRPerEmployee:{
+          url: '/admin/attendance/history/print/per-employee',
+          name: 'Print DTR Per Employee'
+          },
         },
     })%>
     <div class="d-flex table-container"> 
-        
+    
         <table id="mainTable" class="table border-top border-bottom" style="width: 100%;">
             <thead>
                 <tr>
-                    <th>Name</th>
-                    <th>No. of Attendances</th>
                     <th>Attendance Period</th>
+                    <th>No. of Attendances</th>
                     <th></th>
                 </tr>
             </thead>
@@ -120,12 +144,11 @@
               <%if(data.result){%>
                 <% Object.values(data.result).forEach(attendance =>{%> 
                   <tr>
-                    <td><%=attendance.name%></td>
-                    <td><%=attendance.attendance%></td>
-                    <td><%=moment(attendance.date.from).format('MMMM')%> <%=moment(new Date(attendance.date.to)).date()%>-<%=(moment(attendance.date.to).format('MMMM') === moment(attendance.date.from).format('MMMM')) ? moment(new Date(attendance.date.from)).date() : moment(attendance.date.to).format('MMMM') + " " +  moment(attendance.date.to).date()%> <%=moment(attendance.date.to).year()%></td>
-                    <td>
-                      <a href="/admin/attendance/<%=attendance._id%>/dtr?from=<%=query.from%>&to=<%=query.to%>">Print</a>
-                    </td>
+                      <td><%=moment(attendance.date_from).format('MMMM')%> <%=moment(new Date(attendance.date_from)).date()%>-<%=(moment(attendance.date_to).format('MMMM') === moment(attendance.date_from).format('MMMM')) ? moment(new Date(attendance.date_to)).date() : moment(attendance.date_to).format('MMMM') + " " +  moment(attendance.date_to).date()%> <%=moment(attendance.date_to).year()%></td>
+                      <td><%=attendance.attendances.length%></td>
+                      <td>
+                          <a href="/admin/attendance/history/dtr?id=<%=attendance._id%>">Print</a>
+                      </td>
                   </tr>
                   <%}); %>
               <%}%>
