--- a/views/travelPass.ejs
+++ b/views/travelPass.ejs
@@ -96,8 +96,8 @@
                     </div>
                     <select class="custom-select" name="project" id="projectSelect">
                         <option >Project Type</option>
-                        <option value="Project One" selected>Project One</option>
-                        <option value="Project Two">Project Two</option>
+                        <option value="O.B" selected>Official Business</option>
+                        <option value="T.O">Travel Order</option>
                     </select>
                     <div class="mb-0">
                         <input  type="date" name="fromDate" value="" id="" class="sideContainerDate">
