--- a/views/Employees.ejs
+++ b/views/Employees.ejs
@@ -15,8 +15,8 @@
     <div class="d-flex gap-4 "> 
         <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
              <div class="d-flex flex-column justify-content-around">
-                <p>Monthly Salary</p>
-                <p style="font-size:1.5rem;"><b>P</b></p>
+                <p>Employees</p>
+                <p style="font-size:1.5rem;"><b><%=data.summaryData[0].totalEmployees%></b></p>
              </div>
              <div class="d-flex">
                 <p></p>
@@ -25,38 +25,8 @@
         </div>
         <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
              <div class="d-flex flex-column justify-content-around">
-                <p>Semi-Monthly Salary</p>
-                <p style="font-size:1.5rem;"><b>P</b></p>
-             </div>
-             <div class="d-flex">
-                <p></p>
-                <p class="mt-auto p-2 bd-highlight">Totals</p>
-             </div>
-        </div>
-        <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
-          <div class="d-flex flex-column justify-content-around">
-             <p>Deduction</p>
-             <p style="font-size:1.5rem;"><b>P</b></p>
-          </div>
-          <div class="d-flex">
-             <p></p>
-             <p class="mt-auto p-2 bd-highlight">Totals</p>
-          </div>
-     </div>
-        <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
-             <div class="d-flex flex-column justify-content-around">
-                <p>Gross Pay</p>
-                <p style="font-size:1.5rem;"><b>P</b></p>
-             </div>
-             <div class="d-flex">
-                <p></p>
-                <p class="mt-auto p-2 bd-highlight">Totals</p>
-             </div>
-        </div>
-        <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
-             <div class="d-flex flex-column justify-content-around">
-                <p>Net Pay</p>
-                <p style="font-size:1.5rem;"><b></b></p>
+                <p>Payroll Groups</p>
+                <p style="font-size:1.5rem;"><b><%=data.summaryData[0].totalPayrollGroups%></b></p>
              </div>
              <div class="d-flex">
                 <p></p>
