--- a/views/attendanceHistory.ejs
+++ b/views/attendanceHistory.ejs
@@ -117,43 +117,69 @@
     </div>
       <%-include('partials/navBar.ejs', {data:{
         dailyTimeRecord: {
-            url: '/admin/attendance/history/all',
-            name: 'Daily Time Records'
+          url: '/admin/attendance/history/all',
+          name: 'Daily Time Records'
         },
-        attendancePeriod:{
-            url: '/admin/attendance/history/per-employee',
-            name: 'Daily Time Records Per Employee'
-            },
+        printDTR:{
+          url: '/admin/attendance/history/print',
+          name: 'Print DTR'
+        },
+        printDTRPerEmployee:{
+          url: '/admin/attendance/history/print/per-employee',
+          name: 'Print DTR Per Employee'
+          },
         },
     })%>
-    <div class="d-flex table-container"> 
-    
-        <table id="mainTable" class="table border-top border-bottom" style="width: 100%;">
-            <thead>
-                <tr>
-                    <th>Attendance Period</th>
-                    <th>No. of Attendances</th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-              <%if(data.result){%>
-                <% Object.values(data.result).forEach(attendance =>{%> 
+    <div class="d-flex  table-container"> 
+        
+      <table id="mainTable" class="table border-top border-bottom" style="width: 100%;">
+          <thead>
+              <tr>
+                  <th rowspan="2">Employee ID</th>
+                  <th rowspan="2">Employee</th>
+                  <th rowspan="2" data-sort='YYYYMMDD'>Date</th>
+                  <th colspan="2">AM</th>
+                  <th colspan="2">PM</th>
+                  <th rowspan="2">Status</th>
+              </tr>
+              <tr>
+                  <th>Time In</th>
+                  <th>Time Out</th>
+                  <th>Time In</th>
+                  <th>Time Out</th>
+              </tr>
+          </thead>
+          <tbody>
+              <% Object.values(data.result).forEach(attendance =>{%> 
                   <tr>
-                      <td><%=moment(attendance.date_from).format('MMMM')%> <%=moment(new Date(attendance.date_from)).date()%>-<%=(moment(attendance.date_to).format('MMMM') === moment(attendance.date_from).format('MMMM')) ? moment(new Date(attendance.date_to)).date() : moment(attendance.date_to).format('MMMM') + " " +  moment(attendance.date_to).date()%> <%=moment(attendance.date_to).year()%></td>
-                      <td><%=attendance.attendances.length%></td>
+                      <td><%=attendance.emp_code%></td>
+                      <td><%=attendance.name%></td>
+                      <td><%=moment(attendance.date).format('LL')%></td>
+                      <td><%=(!attendance.am.time_in && attendance.message === 'Office')? '--:--:--': (attendance.message.includes('T.O') || attendance.message.includes('O.B')) ? attendance.message : moment(attendance.am.time_in).format('LTS')%></td>
+                      <td><%=(!attendance.am.time_out)? '--:--:--' : moment(attendance.am.time_out).format('LTS')%></td>
+                      <td><%=(!attendance.pm.time_in)? '--:--:--' : moment(attendance.pm.time_in).format('LTS')%></td>
+                      <td><%=(!attendance.pm.time_out)? '--:--:--' : moment(attendance.pm.time_out).format('LTS')%></td>
                       <td>
-                          <a href="/admin/attendance/history/dtr?id=<%=attendance._id%>">Print</a>
+                          <div class="statusContainer">
+                              <%if(attendance.status.isLate){%>
+                                  <div class="status">late</div>
+                              <%}%>
+                              <%if(attendance.status.isHalf){%>
+                                  <div class="status">half</div>
+                              <%}%>
+                              <%if(attendance.status.isUndertime){%>
+                                  <div class="status">undertime</div>
+                              <%}%>
+                          </div>
+                          
                       </td>
                   </tr>
                   <%}); %>
-              <%}%>
-            </tbody>
-            <tfoot>
-            </tfoot>
-        </table>
-    </div>
-</div>
+          </tbody>
+          <tfoot>
+          </tfoot>
+      </table>
+  </div>
 
 
 
