--- a/views/attendanceSummary.ejs
+++ b/views/attendanceSummary.ejs
@@ -8,7 +8,7 @@
     
     <%-include('partials/navBar.ejs', {data:{
             attendance: {
-                url: '/admin/attendance/all',
+                url: '/admin/attendance/summary',
                 name: 'Attendance'
             },
             attendancePeriod:{
@@ -115,46 +115,30 @@
         <table id="mainTable" class="table border-top border-bottom" style="width: 100%;">
             <thead>
                 <tr>
-                    <th rowspan="2">Employee ID</th>
-                    <th rowspan="2">Employee</th>
-                    <th rowspan="2" data-sort='YYYYMMDD'>Date</th>
-                    <th colspan="2">AM</th>
-                    <th colspan="2">PM</th>
-                    <th rowspan="2">Status</th>
-                </tr>
-                <tr>
-                    <th>Time In</th>
-                    <th>Time Out</th>
-                    <th>Time In</th>
-                    <th>Time Out</th>
+                    <th>Employee ID</th>
+                    <th>Employee</th>
+                    <th>Calendar Days (days)</th>
+                    <th data-sort='YYYYMMDD'>Attendance (days)</th>
+                    <th data-sort='YYYYMMDD'>Absents (days)</th>
+                    <th>Late (minutes)</th>
+                    <th>Undertime (minutes)</th>
                 </tr>
             </thead>
             <tbody>
-                <% Object.values(data.result).forEach(attendance =>{%> 
-                    <tr>
-                        <td><%=attendance.emp_code%></td>
-                        <td><%=attendance.name%></td>
-                        <td><%=moment(attendance.date).format('LL')%></td>
-                        <td><%=(!attendance.am.time_in && attendance.message === 'Office')? '--:--:--': (attendance.message.includes('T.O') || attendance.message.includes('O.B')) ? attendance.message : moment(attendance.am.time_in).format('LTS')%></td>
-                        <td><%=(!attendance.am.time_out)? '--:--:--' : moment(attendance.am.time_out).format('LTS')%></td>
-                        <td><%=(!attendance.pm.time_in)? '--:--:--' : moment(attendance.pm.time_in).format('LTS')%></td>
-                        <td><%=(!attendance.pm.time_out)? '--:--:--' : moment(attendance.pm.time_out).format('LTS')%></td>
-                        <td>
-                            <div class="statusContainer">
-                                <%if(attendance.status.isLate){%>
-                                    <div class="status">late</div>
-                                <%}%>
-                                <%if(attendance.status.isHalf){%>
-                                    <div class="status">half</div>
-                                <%}%>
-                                <%if(attendance.status.isUndertime){%>
-                                    <div class="status">undertime</div>
-                                <%}%>
-                            </div>
-                            
-                        </td>
-                    </tr>
-                    <%}); %>
+                <%if(data.summaryData[0]){%>
+                    <% Object.values(data.summaryData[0].attendances).forEach(attendance =>{%> 
+                        <tr>
+                            <td><%=attendance._id%></td>
+                            <td><%=attendance.name%></td>
+                            <td><%=(data.summaryData[0]) ? data.summaryData[0].calendarDays : 0%></td>
+                            <td><%=(!attendance.total_attendance) ? 0 : attendance.total_attendance %> </td>
+                            <td><%=(!attendance.total_absent) ? 0 : attendance.total_absent %></td>
+                            <td><%=(!attendance.total_late) ? 0 : attendance.total_late %></td>
+                            <td><%=(!attendance.total_undertime) ? 0 : attendance.total_undertime %></td>
+                        </tr>
+                        <%}); %>
+                <%}%>
+                
             </tbody>
             <tfoot>
             </tfoot>
