--- a/views/attendanceDTR.ejs
+++ b/views/attendanceDTR.ejs
@@ -85,7 +85,7 @@
               </div>
             <input type="date" name="from" value="<%=query.from%>" id="from" class="rounded-1">
             <input type="date" name="to" value="<%=query.to%>" id="to" class="rounded-1"    >
-            <a id='btnCreate_AttendanceHistory' class="btn btn-primary" href="#" ==> Create DTR </a>
+            <a id='btnCreate_AttendanceHistory' class="btn btn-primary" href="#"> Create DTR </a>
             <script>
               const createPayroll = document.querySelector('#btnCreate_AttendanceHistory');
 
