--- a/views/attendanceDTR.ejs
+++ b/views/attendanceDTR.ejs
@@ -12,7 +12,7 @@
           },
           attendancePeriod:{
               url: '/admin/attendance/history/print',
-              name: 'Attendance Periods'
+              name: 'DTR History'
           },
       },
     })%>
@@ -135,7 +135,7 @@
         <table id="mainTable" class="table border-top border-bottom" style="width: 100%;">
             <thead>
                 <tr>
-                    <th>Attendance Period</th>
+                    <th>DTR Period</th>
                     <th>No. of Attendances</th>
                     <th></th>
                 </tr>
