--- a/views/attendanceHistory.ejs
+++ b/views/attendanceHistory.ejs
@@ -12,7 +12,7 @@
           },
           attendancePeriod:{
               url: '/admin/attendance/history/all',
-              name: 'Attendance Periods'
+              name: 'DTR History'
           },
       },
     })%>
