--- a/views/attendancePerEmployee.ejs
+++ b/views/attendancePerEmployee.ejs
@@ -13,7 +13,7 @@
         },
         attendancePeriod:{
             url: '/admin/attendance/history/print/per-employee',
-            name: 'Attendance Periods'
+            name: 'DTR History'
             },
         },
     })%>
@@ -112,7 +112,7 @@
                 <tr>
                     <th>Name</th>
                     <th>No. of Attendances</th>
-                    <th>Attendance Period</th>
+                    <th>DTR Period</th>
                     <th></th>
                 </tr>
             </thead>
