--- a/views/Payroll.ejs
+++ b/views/Payroll.ejs
@@ -26,8 +26,8 @@
     <div class="d-flex gap-4 "> 
       <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
            <div class="d-flex flex-column justify-content-around">
-              <p>Monthly Salary</p>
-              <p style="font-size:1.5rem;"><b>P</b></p>
+              <p>No. of Days</p>
+              <p style="font-size:1.5rem;"><b><%=(data.summaryData[0]) ? data.summaryData[0].total_days : 0 %> days</b></p>
            </div>
            <div class="d-flex">
               <p></p>
@@ -36,28 +36,8 @@
       </div>
       <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
            <div class="d-flex flex-column justify-content-around">
-              <p>Semi-Monthly Salary</p>
-              <p style="font-size:1.5rem;"><b>P</b></p>
-           </div>
-           <div class="d-flex">
-              <p></p>
-              <p class="mt-auto p-2 bd-highlight">Totals</p>
-           </div>
-      </div>
-      <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
-        <div class="d-flex flex-column justify-content-around">
-           <p>Deduction</p>
-           <p style="font-size:1.5rem;"><b>P</b></p>
-        </div>
-        <div class="d-flex">
-           <p></p>
-           <p class="mt-auto p-2 bd-highlight">Totals</p>
-        </div>
-   </div>
-      <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
-           <div class="d-flex flex-column justify-content-around">
-              <p>Gross Pay</p>
-              <p style="font-size:1.5rem;"><b>P</b></p>
+              <p>Gross Amount Earned</p>
+              <p style="font-size:1.5rem;"><b>₱<%=(data.summaryData[0]) ? data.summaryData[0].total_grosspay : '' %></b></p>
            </div>
            <div class="d-flex">
               <p></p>
@@ -66,16 +46,15 @@
       </div>
       <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
            <div class="d-flex flex-column justify-content-around">
-              <p>Net Pay</p>
-              <p style="font-size:1.5rem;"><b></b></p>
+              <p>Net Amount Due</p>
+              <p style="font-size:1.5rem;"><b>₱<%=(data.summaryData[0]) ? data.summaryData[0].total_netpay : '' %></b></p>
            </div>
            <div class="d-flex">
               <p></p>
               <p class="mt-auto p-2 bd-highlight">Totals</p>
            </div>
       </div>
-    </div>
-    
+  </div> 
     <%-include('partials/Modal') %> 
     <div class="d-flex filterContainer rounded-1 gap-3">
         <form action="">
@@ -110,37 +89,56 @@
     })%>
     <div class="d-flex table-container"> 
     
-        <table id="mainTable" class="table border-top border-bottom" style="width: 100%;">
-            <thead>
+      <table id="mainTable" class="table border-top border-bottom" style="width: 100%;">
+        <thead>
+            <tr>
+                <th rowspan="2">EmployeeID</th>
+                <th rowspan="2">Employee</th>
+                <th rowspan="2">Position</th>
+                <th rowspan="2">PRC</th>
+                <th rowspan="2">Monthly Rate</th>
+                <th rowspan="2">no. of days</th>
+                <th rowspan="2">Gross Amount Earned</th>
+                <th colspan="3">Tax</th>
+                <th colspan="3">Contributions</th>
+                <th rowspan="2">Net Amount Due</th>
+                <th rowspan="2">Signature of Recipient</th>
+            </tr>
+            <tr>
+                <th>2%</th>
+                <th>5%</th>
+                <th>10%</th>
+                <th>SSS</th>
+                <th>PAGIBIG</th>
+                <th>PHILHEALTH</th>
+                
+            </tr>
+        </thead>
+        <tbody>
+            <% Object.values(data.result).forEach(user =>{%> 
                 <tr>
-                    <th>Employee ID</th>
-                    <th>Employee</th>
-                    <th>Payroll Group</th>
-                    <th>Gross Amount Earned</th>
-                    <th>Net Amount Due</th>
-                    <th></th>
+                    <td><%=user.emp_code%></td>
+                    <td><%=user.name%></td>
+                    <td><%=user.designation%></td>
+                    <td></td>
+                    <td><%=user.salary%></td>
+                    <td><%=user.attendance.whalf_days%></td>
+                    <td><%=user.salaries.gross_salary%></td>
+                    <td><%=user.deduction.tax_deduction%></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td><%=user.salaries.net_salary%></td>
+                    <td></td>  
                 </tr>
-            </thead>
-            <tbody>
-              <%if(data.result){%>
-                <% Object.values(data.result).forEach(user =>{%> 
-                  <tr>
-                      <td><%=user.emp_code%></td>
-                      <td><%=user.name%></td>
-                      <td><%=user.payroll_group.fund_cluster%> - <%=user.payroll_group.project_name%> <%=(user.payroll_group.program_name) ? +  '/ ' + user.payroll_group.program_name : ''%></td>
-                      <td><%=user.salaries.gross_salary%></td>
-                      <td><%=user.salaries.net_salary%></td>
-                      <td >
-                          <a href="/admin/payroll/<%=user.emp_code%>/payslip?from=<%=query.from%>&to=<%=query.to%>">Payslip</a>
-                          <a href="/admin/payroll/receipt?from=<%=query.from%>&to=<%=query.to%>&p_group=<%=user.payroll_group._id%>">Payroll</a>
-                      </td>
-                  </tr>
-                  <%}); %>
-              <%}%>
-            </tbody>
-            <tfoot>
-            </tfoot>
-        </table>
+                <%}); %>
+                
+        </tbody>
+        <tfoot>
+        </tfoot>
+    </table>
     </div>
 </div>
 
