--- a/views/attendanceSummary.ejs
+++ b/views/attendanceSummary.ejs
@@ -13,7 +13,7 @@
             },
             attendancePeriod:{
                 url: '/admin/attendance/history/all',
-                name: 'Attendance Periods'
+                name: 'DTR History'
             },
         },
     })%>
