--- a/views/partials/Aside.ejs
+++ b/views/partials/Aside.ejs
@@ -26,14 +26,14 @@
       </a>
       <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
         <a class="dropdown-item" href="/admin/attendance/all">Attendance</a>
-        <a class="dropdown-item" href="/admin/attendance/history/all">Attendance Periods</a>
+        <a class="dropdown-item" href="/admin/attendance/history/all">DTR History</a>
       </div>
     </li>
     <li class="nav-item dropdown position-static">
       <a class="nav-link dropdown-toggle <%=(url.toLowerCase().includes('/payroll'))?'active':''%>" href="/admin/payroll" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Manage Payroll</a>
       <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
         <a class="dropdown-item" href="/admin/payroll/all">Payroll</a>
-        <a class="dropdown-item" href="/admin/payroll/history/all">Payroll Periods</a>
+        <a class="dropdown-item" href="/admin/payroll/history/all">Payroll History</a>
         <a class="dropdown-item" href="/admin/payroll/groups/all">Payroll Groups</a>
       </div>
     </li>
