--- a/views/Payroll.ejs
+++ b/views/Payroll.ejs
@@ -17,17 +17,18 @@
                 name: 'Payroll Periods'
             },
             payrollGroups:{
-                url: '/admin/payroll/groups/all',
+                url: '/admin/payroll/groups',
                 name: 'Payroll Groups'
             }
         },
     })%>
-
+    
     <div class="d-flex gap-4 "> 
+
       <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
            <div class="d-flex flex-column justify-content-around">
               <p>No. of Days</p>
-              <p style="font-size:1.5rem;"><b><%=(data.summaryData[0]) ? data.summaryData[0].total_days : 0 %> days</b></p>
+              <p style="font-size:1.5rem;"><b><%=(data.summaryData.length) ? (data.summaryData[0].total_days) ? data.summaryData[0].total_days : 0 : 0 %> days</b></p>
            </div>
            <div class="d-flex">
               <p></p>
@@ -37,7 +38,7 @@
       <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
            <div class="d-flex flex-column justify-content-around">
               <p>Gross Amount Earned</p>
-              <p style="font-size:1.5rem;"><b>₱<%=(data.summaryData[0]) ? data.summaryData[0].total_grosspay : '' %></b></p>
+              <p style="font-size:1.5rem;"><b>₱<%=(data.summaryData.length) ? (data.summaryData[0].total_days) ? data.summaryData[0].total_grosspay : 0 : 0 %></b></p>
            </div>
            <div class="d-flex">
               <p></p>
@@ -47,7 +48,7 @@
       <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
            <div class="d-flex flex-column justify-content-around">
               <p>Net Amount Due</p>
-              <p style="font-size:1.5rem;"><b>₱<%=(data.summaryData[0]) ? data.summaryData[0].total_netpay : '' %></b></p>
+              <p style="font-size:1.5rem;"><b>₱<%=(data.summaryData.length) ? (data.summaryData[0].total_netpay) ? data.summaryData[0].total_netpay :0 : 0 %></b></p>
            </div>
            <div class="d-flex">
               <p></p>
@@ -71,9 +72,12 @@
             <input type="date" name="from" value="<%=query.from%>" id="from" class="rounded-1">
             <input type="date" name="to" value="<%=query.to%>" id="to" class="rounded-1"    >
             <select name="p_group" id="projectSelect" class="rounded-1 custom-select">
-              <% Object.values(group.result).forEach(group =>{%> 
-                <option value="<%=group._id%>" <%=(query.p_group === group._id) ? 'selected': ''%>><%=group.fund_cluster%> - <%=group.project_name%> <%=(group.program_name)? + "- " + group.program_name: ''%></option>
-              <%}); %>
+              <%if(group.result){%>
+                <% Object.values(group.result).forEach(group =>{%> 
+                    <option value="<%=group._id%>" <%=(query.p_group === group._id) ? 'selected': ''%>><%=group.fund_cluster%> - <%=group.project_name%> <%=(group.program_name)? + "- " + group.program_name: ''%></option>
+                <%}); %>
+              <%}%>
+               
               
             </select>
             
@@ -115,25 +119,28 @@
             </tr>
         </thead>
         <tbody>
-            <% Object.values(data.result).forEach(user =>{%> 
-                <tr>
-                    <td><%=user.emp_code%></td>
-                    <td><%=user.name%></td>
-                    <td><%=user.designation%></td>
-                    <td></td>
-                    <td><%=user.salary%></td>
-                    <td><%=user.attendance.whalf_days%></td>
-                    <td><%=user.salaries.gross_salary%></td>
-                    <td><%=user.deduction.tax_deduction%></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td><%=user.salaries.net_salary%></td>
-                    <td></td>  
-                </tr>
+            <%if(data.result){%>
+                <% Object.values(data.result).forEach(user =>{%> 
+                    <tr>
+                        <td><%=user.emp_code%></td>
+                        <td><%=user.name%></td>
+                        <td><%=user.designation%></td>
+                        <td></td>
+                        <td><%=user.salary%></td>
+                        <td><%=user.attendance.whalf_days%></td>
+                        <td><%=user.salaries.gross_salary%></td>
+                        <td><%=user.deduction.tax_deduction%></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td><%=user.salaries.net_salary%></td>
+                        <td></td>  
+                    </tr>
                 <%}); %>
+            <%}%>
+            
                 
         </tbody>
         <tfoot>
