--- a/views/partials/Aside.ejs
+++ b/views/partials/Aside.ejs
@@ -16,7 +16,7 @@
     </li>
     <hr>
     <li>
-      <a href="/admin/employees/all" class="nav-link <%=(url.toLowerCase().includes('/employees'))?'active':''%>">
+      <a href="/admin/employees" class="nav-link <%=(url.toLowerCase().includes('/employees'))?'active':''%>">
         Employees
       </a>
     </li>
@@ -34,7 +34,7 @@
       <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
         <a class="dropdown-item" href="/admin/payroll/all">Payroll</a>
         <a class="dropdown-item" href="/admin/payroll/history/all">Payroll History</a>
-        <a class="dropdown-item" href="/admin/payroll/groups/all">Payroll Groups</a>
+        <a class="dropdown-item" href="/admin/payroll/groups">Payroll Groups</a>
       </div>
     </li>
     <!-- <li class="nav-item">
