--- a/views/allLeave.ejs
+++ b/views/allLeave.ejs
@@ -4,7 +4,14 @@
 
     <%-include('partials/Aside')%> 
 <div class="d-flex flex-column flex-fill" style="border-left: 1px solid #dddddd; padding: 1.5em 2em 1.5em 2em;  gap:1.5em; overflow: auto;">
-    <div class="d-flex justify-content-between"> 
+      <%-include('partials/navBar.ejs', {data:{
+          deductions: {
+              url: '/admin/deductions',
+              name: 'Deductions'
+          }
+        },
+      })%>   
+  <div class="d-flex justify-content-between"> 
             <div class="d-flex justify-content-center align-items-center rounded-1"> 
               <a href="#" class="nav-link" style="padding-right: 10px !important;">
                   Home 
