--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -11,8 +11,329 @@
             }
         },
     })%>
+   <style>
+      .card{
+         background-color: #f5f5f5;
+      }
 
-    <div class="d-flex gap-4" > 
+   </style>
+    <div class="grey-bg container-fluid d-flex flex-column" style="gap: 1.5em;">
+      <section id="minimal-statistics">
+        <div class="row">
+          <div class="col-12 mt-3 mb-1">
+            <h4 class="text-uppercase">Minimal Statistics Cards</h4>
+            <p>Statistics on minimal cards.</p>
+          </div>
+        </div>
+        <div class="d-flex flex-column" style="gap: 1.5em;">
+         <div class="row">
+            <div class="col-xl-3 col-lg-6">
+              <div class="card card-stats mb-4 mb-xl-0">
+                <div class="card-body">
+                  <div class="row">
+                    <div class="col">
+                      <h5 class="card-title text-uppercase text-muted mb-0">Traffic</h5>
+                      <span class="h2 font-weight-bold mb-0">350,897</span>
+                    </div>
+                    <div class="col-auto">
+                      
+                    </div>
+                  </div>
+                  <p class="mt-3 mb-0 text-muted text-sm">
+                    <a href="#"><span class="text-nowrap">View Details</span></a>
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-xl-3 col-lg-6">
+               <div class="card card-stats mb-4 mb-xl-0">
+                 <div class="card-body">
+                   <div class="row">
+                     <div class="col">
+                       <h5 class="card-title text-uppercase text-muted mb-0">Traffic</h5>
+                       <span class="h2 font-weight-bold mb-0">350,897</span>
+                     </div>
+                     <div class="col-auto">
+                       
+                     </div>
+                   </div>
+                   <p class="mt-3 mb-0 text-muted text-sm">
+                     <a href="#"><span class="text-nowrap">View Details</span></a>
+                   </p>
+                 </div>
+               </div>
+             </div>
+          </div>
+        
+          <div class="row">
+            <div class="col-xl-3 col-sm-6 col-12">
+              <div class="card">
+                <div class="card-content">
+                  <div class="card-body">
+                    <div class="media d-flex">
+                      <div class="media-body text-left">
+                        <h3 class="danger">278</h3>
+                        <span>New Projects</span>
+                      </div>
+                      <div class="align-self-center">
+                        <i class="icon-rocket danger font-large-2 float-right"></i>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-xl-3 col-sm-6 col-12">
+              <div class="card">
+                <div class="card-content">
+                  <div class="card-body">
+                    <div class="media d-flex">
+                      <div class="media-body text-left">
+                        <h3 class="success">156</h3>
+                        <span>New Clients</span>
+                      </div>
+                      <div class="align-self-center">
+                        <i class="icon-user success font-large-2 float-right"></i>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+        
+            <div class="col-xl-3 col-sm-6 col-12">
+              <div class="card">
+                <div class="card-content">
+                  <div class="card-body">
+                    <div class="media d-flex">
+                      <div class="media-body text-left">
+                        <h3 class="warning">64.89 %</h3>
+                        <span>Conversion Rate</span>
+                      </div>
+                      <div class="align-self-center">
+                        <i class="icon-pie-chart warning font-large-2 float-right"></i>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-xl-3 col-sm-6 col-12">
+              <div class="card">
+                <div class="card-content">
+                  <div class="card-body">
+                    <div class="media d-flex">
+                      <div class="media-body text-left">
+                        <h3 class="primary">423</h3>
+                        <span>Support Tickets</span>
+                      </div>
+                      <div class="align-self-center">
+                        <i class="icon-support primary font-large-2 float-right"></i>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        
+          <div class="row">
+            <div class="col-xl-3 col-sm-6 col-12">
+              <div class="card">
+                <div class="card-content">
+                  <div class="card-body">
+                    <div class="media d-flex">
+                      <div class="media-body text-left">
+                        <h3 class="primary">278</h3>
+                        <span>New Posts</span>
+                      </div>
+                      <div class="align-self-center">
+                        <i class="icon-book-open primary font-large-2 float-right"></i>
+                      </div>
+                    </div>
+                    <div class="progress mt-1 mb-0" style="height: 7px;">
+                      <div class="progress-bar bg-primary" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-xl-3 col-sm-6 col-12">
+              <div class="card">
+                <div class="card-content">
+                  <div class="card-body">
+                    <div class="media d-flex">
+                      <div class="media-body text-left">
+                        <h3 class="warning">156</h3>
+                        <span>New Comments</span>
+                      </div>
+                      <div class="align-self-center">
+                        <i class="icon-bubbles warning font-large-2 float-right"></i>
+                      </div>
+                    </div>
+                    <div class="progress mt-1 mb-0" style="height: 7px;">
+                      <div class="progress-bar bg-warning" role="progressbar" style="width: 35%" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+        
+            <div class="col-xl-3 col-sm-6 col-12">
+              <div class="card">
+                <div class="card-content">
+                  <div class="card-body">
+                    <div class="media d-flex">
+                      <div class="media-body text-left">
+                        <h3 class="success">64.89 %</h3>
+                        <span>Bounce Rate</span>
+                      </div>
+                      <div class="align-self-center">
+                        <i class="icon-cup success font-large-2 float-right"></i>
+                      </div>
+                    </div>
+                    <div class="progress mt-1 mb-0" style="height: 7px;">
+                      <div class="progress-bar bg-success" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-xl-3 col-sm-6 col-12">
+              <div class="card">
+                <div class="card-content">
+                  <div class="card-body">
+                    <div class="media d-flex">
+                      <div class="media-body text-left">
+                        <h3 class="danger">423</h3>
+                        <span>Total Visits</span>
+                      </div>
+                      <div class="align-self-center">
+                        <i class="icon-direction danger font-large-2 float-right"></i>
+                      </div>
+                    </div>
+                    <div class="progress mt-1 mb-0" style="height: 7px;">
+                      <div class="progress-bar bg-danger" role="progressbar" style="width: 40%" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>        
+        </div>
+      </section>
+      
+      <section id="stats-subtitle" class="d-flex flex-column" style="gap: 1.5em">
+    
+         <div class="row">
+         <div class="col-xl-6 col-md-12">
+            <div class="card overflow-hidden">
+               <div class="card-content">
+               <div class="card-body cleartfix">
+                  <div class="media align-items-stretch">
+                     <div class="align-self-center">
+                     <i class="icon-pencil primary font-large-2 mr-2"></i>
+                     </div>
+                     <div class="media-body">
+                        <a href="/admin/attendance/history/print"><h4>Print DTR</h4></a>
+                     <span>Total DTR</span>
+                     </div>
+                     <div class="align-self-center">
+                     <h1>18,000</h1>
+                     </div>
+                  </div>
+               </div>
+               </div>
+            </div>
+         </div>
+      
+         <div class="col-xl-6 col-md-12">
+            <div class="card">
+               <div class="card-content">
+               <div class="card-body cleartfix">
+                  <div class="media align-items-stretch">
+                     <div class="align-self-center">
+                     <i class="icon-speech warning font-large-2 mr-2"></i>
+                     </div>
+                     <div class="media-body">
+                     <a href="/admin/attendance"><h4>Print DTR Per Employee</h4></a>
+                     <span>Total DTR Per Employee</span>
+                     </div>
+                     <div class="align-self-center"> 
+                     <h1>84,695</h1>
+                     </div>
+                  </div>
+               </div>
+               </div>
+            </div>
+         </div>
+         <div class="col-xl-6 col-md-12">
+            <div class="card">
+               <div class="card-content">
+               <div class="card-body cleartfix">
+                  <div class="media align-items-stretch">
+                     <div class="align-self-center">
+                     <i class="icon-speech warning font-large-2 mr-2"></i>
+                     </div>
+                     <div class="media-body">
+                     <a href="/admin/attendance"><h4>All Daily Time Records</h4></a>
+                     <span>Total DTR Per Employee</span>
+                     </div>
+                     <div class="align-self-center"> 
+                     <h1>84,695</h1>
+                     </div>
+                  </div>
+               </div>
+               </div>
+            </div>
+         </div>
+         </div>
+         <div class="row">
+            <div class="col-xl-6 col-md-12">
+            <div class="card overflow-hidden">
+               <div class="card-content">
+                  <div class="card-body cleartfix">
+                  <div class="media align-items-stretch">
+                     <div class="align-self-center">
+                        <i class="icon-pencil primary font-large-2 mr-2"></i>
+                     </div>
+                     <div class="media-body">
+                        <a href="/admin/employees"><h4>View Employees</h4></a>
+                        <span>Total Employees</span>
+                     </div>
+                     <div class="align-self-center">
+                        <h1>18,000</h1>
+                     </div>
+                  </div>
+                  </div>
+               </div>
+            </div>
+            </div>
+      
+            <div class="col-xl-6 col-md-12">
+            <div class="card">
+               <div class="card-content">
+                  <div class="card-body cleartfix">
+                  <div class="media align-items-stretch">
+                     <div class="align-self-center">
+                        <i class="icon-speech warning font-large-2 mr-2"></i>
+                     </div>
+                     <div class="media-body">
+                        <a href="/admin/attendance"><h4>View Attendance</h4></a>
+                        <span>Total Attendance</span>
+                     </div>
+                     <div class="align-self-center"> 
+                        <h1>84,695</h1>
+                     </div>
+                  </div>
+                  </div>
+               </div>
+            </div>
+            </div>
+         </div>
+    </section>
+    </div>
+    <!-- <div class="d-flex gap-4" > 
         <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
              <div class="d-flex flex-column justify-content-around">
                 <p>Employees</p>
@@ -63,7 +384,7 @@
                <p class="mt-auto p-2 bd-highlight">Totals</p>
             </div>
         </div>
-    </div>
+    </div> -->
     
 </div>
 
